fix global css ring color variable in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -101,7 +101,7 @@
   --popover-foreground: 0 0% 80%;
   --border: 0 0% 30%;
   --input: 0 0% 40%;
-  --ring: 0 0% 20%;
+  --ring: 0 0% 25%;
 
   --sidebar-background: 0 0% 20%;
   --sidebar-foreground: 240 4.8% 95.9%;
